Stylesheet/emote/tag updates 2013-06-10

--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -1,3 +1,18 @@
+/* Announcement Stuff */
+.md h2 a {
+    color: red;
+    display: block;
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+    width: 230px;
+}
+
+.md h2 {
+    margin: 20px 0;
+    text-align: center;
+}
+
 /*messing with worldtrekka*/
 .id-t3_1420zy a.title,#siteTable_t3_1420zy div.md p{
 direction: rtl;
