--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -1,6 +1,4 @@
 a[href|="/ccpose"] {
-display:block;
-clear:none;
 float:left;
 width:140px;
 height:168px;
@@ -9,8 +7,6 @@ background-image:url(%%ccpose%%);
 }
 
 a[href|="/ccgiggle"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:150px;
@@ -19,8 +15,6 @@ background-image:url(%%ccgiggle%%);
 }
 
 a[href|="/ccpose2"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:165px;
@@ -30,8 +24,6 @@ background-image:url(%%ccpose2%%);
 
 
 a[href|="/ccpaper"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:163px;
@@ -40,8 +32,6 @@ background-image:url(%%ccpaper%%);
 }
 
 a[href|="/ccdeal"] {
-display:block;
-clear:none;
 float:left;
 width:139px;
 height:150px;
@@ -50,8 +40,6 @@ background-image:url(%%ccdeal%%);
 }
 
 a[href|="/ccstare"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:138px;
@@ -60,8 +48,6 @@ background-image:url(%%ccstare%%);
 }
 
 a[href|="/cchmm"] {
-display:block;
-clear:none;
 float:left;
 width:134px;
 height:150px;
@@ -71,8 +57,6 @@ background-image:url(%%cchmm%%);
 
 
 a[href|="/ccunamused"] {
-display:block;
-clear:none;
 float:left;
 width:103px;
 height:150px;
@@ -82,8 +66,6 @@ background-image:url(%%ccunamused%%);
 
 
 a[href|="/cceww"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:145px;
@@ -92,8 +74,6 @@ background-image:url(%%cceww%%);
 }
 
 a[href|="/ccgoon"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:105px;
@@ -102,8 +82,6 @@ background-image:url(%%ccgoon%%);
 }
 
 a[href|="/cccry"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:139px;
@@ -112,8 +90,6 @@ background-image:url(%%cccry%%);
 }
 
 a[href|="/ccwat"] {
-display:block;
-clear:none;
 float:left;
 width:92px;
 height:150px;
@@ -122,8 +98,6 @@ background-image:url(%%ccwat%%);
 }
 
 a[href|="/ccblush"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:147px;
@@ -132,8 +106,6 @@ background-image:url(%%ccblush%%);
 }
 
 a[href|="/ccshrug"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:141px;
@@ -142,8 +114,6 @@ background-image:url(%%ccshrug%%);
 }
 
 a[href|="/ccsleep"] {
-display:block;
-clear:none;
 float:left;
 width:190px;
 height:127px;
@@ -152,8 +122,6 @@ background-image:url(%%ccsleep%%);
 }
 
 a[href|="/ccshock"] {
-display:block;
-clear:none;
 float:left;
 width:120px;
 height:150px;
@@ -162,8 +130,6 @@ background-image:url(%%ccshock%%);
 }
 
 a[href|="/highhoof"] {
-display:block;
-clear:none;
 float:left;
 width:250px;
 height:167px;
@@ -172,8 +138,6 @@ background-image:url(%%highhoof%%);
 }
 
 a[href|="/ccsalute"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:130px;
@@ -182,8 +146,6 @@ background-image:url(%%ccsalute%%);
 }
 
 a[href|="/ccstretch"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:139px;
@@ -192,8 +154,6 @@ background-image:url(%%ccstretch%%);
 }
 
 a[href|="/ccyeah"] {
-display:block;
-clear:none;
 float:left;
 width:180px;
 height:170px;
@@ -202,11 +162,26 @@ background-image:url(%%ccyeah%%);
 }
 
 a[href|="/cclove"] {
-display:block;
-clear:none;
 float:left;
 width:150px;
 height:208px;
 background-repeat:no-repeat;
 background-image:url(%%cclove%%);
+}
+
+a[href|="/ccarmor"] {
+float:left;
+width:150px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccarmor%%);
+}
+
+
+a[href|="/highhoof2"] {
+float:left;
+width:329px;
+height:142px;
+background-repeat:no-repeat;
+background-image:url(%%highhoof2%%);
 }
