--- a/source-css/flutquisition.css
+++ b/source-css/flutquisition.css
@@ -142,3 +142,35 @@ a[href|="/af3"] {
     height: 104px;
     background-image:url(%%af3%%)
 }
+a[href|="/flutterbow"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 123px;
+    background-image:url(%%flutterbow%%)
+}
+a[href|="/tavishyhug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 134px;
+    background-image:url(%%tavishy%%)
+}
+a[href|="/classyshy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 134px;
+    background-image:url(%%classyshy%%)
+}
+a[href|="/rarisquee"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 126px;
+    height: 150px;
+    background-image:url(%%rarisquee%%)
+}
