--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1174,7 +1174,8 @@ a[href|="/seanigel"],
 a[href|="/indignanttwilight"],
 a[href|="/indignantcadance"],
 a[href|="/indignantcelestia"],
-a[href|="/indignantluna"]
+a[href|="/indignantluna"],
+a[href|="/fascinating"]
 {
     display: block;
     clear: none;
@@ -1252,6 +1253,11 @@ a[href|="/indignantluna"]
 {
 	width: 181px;
 	background-position: -180px -420px;
+}
+a[href|="/fascinating"]
+{
+	width: 91px;
+	background-position: -361px -420px;
 }
 /* end sheet 8 */
 
@@ -1665,7 +1671,18 @@ a[href|="/flutterchrysalisscared"],
 a[href|="/flutteralltheanimals"],
 a[href|="/killme"],
 a[href|="/bpwhatdididrinklastnight"],
-a[href|="/bpwinehat"]
+a[href|="/bptrain"],
+a[href|="/hipsterbelle"],
+a[href|="/rarisausage"],
+a[href|="/bpthatsgood"],
+a[href|="/bpthink"],
+a[href|="/bpwant"],
+a[href|="/joesdonuthole"],
+a[href|="/bpcoffee"],
+a[href|="/bppursuitofhappiness"],
+a[href|="/bpwinehat"],
+a[href|="/twilicorndafuq"],
+a[href|="/woonalove"]
 {
     display: block;
     clear: none;
@@ -1693,10 +1710,65 @@ a[href|="/bpwhatdididrinklastnight"]
 	width: 121px;
 	background-position: -168px -140px;
 }
+a[href|="/bptrain"]
+{
+	width: 314px;
+	background-position: -0px -280px;
+}
+a[href|="/hipsterbelle"]
+{
+	width: 98px;
+	background-position: -0px -420px;
+}
+a[href|="/rarisausage"]
+{
+	width: 95px;
+	background-position: -98px -420px;
+}
+a[href|="/bpthatsgood"]
+{
+	width: 127px;
+	background-position: -193px -420px;
+}
+a[href|="/bpthink"]
+{
+	width: 89px;
+	background-position: -0px -560px;
+}
+a[href|="/bpwant"]
+{
+	width: 157px;
+	background-position: -89px -560px;
+}
+a[href|="/joesdonuthole"]
+{
+	width: 144px;
+	background-position: -246px -560px;
+}
+a[href|="/bpcoffee"]
+{
+	width: 139px;
+	background-position: -0px -700px;
+}
+a[href|="/bppursuitofhappiness"]
+{
+	width: 222px;
+	background-position: -139px -700px;
+}
 a[href|="/bpwinehat"]
 {
 	width: 130px;
 	height: 200px;
 	background-position: -0px -840px;
+}
+a[href|="/twilicorndafuq"]
+{
+	width: 129px;
+	background-position: -130px -840px;
+}
+a[href|="/woonalove"]
+{
+	width: 106px;
+	background-position: -259px -840px;
 }
 /* end sheet 12 */
