--- a/source-css/mylittlebannertest.css
+++ b/source-css/mylittlebannertest.css
@@ -2,8 +2,8 @@
 /* even though this place is a clusterfuck anyway */
 
 /* Banner Image */
-#header-bottom-left {
-    background: url(%%ysVQC%%) no-repeat center bottom;
+ #header #header-bottom-left {
+    background: url(%%ysVQC%%) no-repeat center bottom !important;
     height: 250px;
 
     }
