--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -155,6 +155,17 @@ a[href|="/fillyderp"] {
     margin-bottom: 5px;
     margin-right: 5px
     }
+a[href|="/spikefinger"] {
+    width: 448px;
+    height: 252px;
+    background-image: url(%%spikefinger%%);
+    display: block;
+    clear: none;
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 5px
+    }
+
 /*==  Flair ==*/
 /*
 .flair {
