--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -10,7 +10,7 @@ Added emotes (1/15/13)
 /* Header */
 
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%mango-banner-2-original%%);
+   background: url(%%mangoheader21%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 200px; 
@@ -51,7 +51,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
     background:  url(%%background1%%)  no-repeat  fixed 50% 65% !important;
 } */
 
-body{background:url(%%bestmlmbackground%%) no-repeat fixed center center!important}
+body{background:url(%%dlkhgjksdg%%) no-repeat fixed center center!important}
 .res-nightmode .content{background-color:transparent!important}
 .res-nightmode{background-color:transparent !important}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
