--- a/source-css/mylittlensfw.css
+++ b/source-css/mylittlensfw.css
@@ -67,6 +67,16 @@ a[href|="/rvinylshake"]{background-image:url(%%rvinylshake%%);clear:none;display
 a[href|="/derpyshake"]{background-image:url(%%derpyshake%%);clear:none;display:block;float:right;height:142px;width:200px}
 a[href|="/orschemote"]{background-image:url(%%orschemote%%);clear:none;display:block;float:left;height:400px;width:300px}
 a[href|="/buzzkillturtle"],a[href|="/horseporn"]{background-image:url(%%buzzkilltutle%%);clear:none;display:block;float:left;height:511px;width:621px}
+a[href|="/huehuetimetoclop"],a[href|="/huehuetimeforclop"] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%huehuetimetoclop%%);
+    width: 500px;
+    height: 282px;
+    margin-bottom: 5px;
+    margin-right: 5px
+    }
 
 /*== Username Modifications ==*/
 a.author[href$="CatmanIX"] {
