--- a/source-css/mylittlesupportgroup.css
+++ b/source-css/mylittlesupportgroup.css
@@ -841,3 +841,10 @@ clear: both;
     margin-right: -40px
     }
 
+.buttons .comments.empty {
+    padding: 1px;
+    margin: 0px;
+    font-size: 95%;
+    font-weight: bold;
+    text-align: left;
+    color: orangered;
