--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -1,4 +1,13 @@
 /* 
+|
+|                       VERSION JOKER GOT THIS SHIT?!
+|
+|                      STYLESHEET FOR R/VINYLSCRATCH         
+|        MOSTLY BY KOOBAXION (sub a wub dub dub) AND 007GHG7 (secrit agnt mahn)       
+|ALSO SOME CREDIT GOES TO RAHLYN (that Rhy guy) AND MRJOKER7854 (no who best pone iz) AND ALISTERDX (Da guy who knows teh 'list')
+|                         RAHLYN IS THE FLAIR GOD
+|            HAI GUIZ I DID NAMEZ SO I HELPED -PINKIE PIE           
+/* 
 _____________________________________________▄▄████████▄ 
 ___________________________________________▄█▓▓▓█▓▓▓▓▓▓██▄ 
 ___________________________________________█▓▓▓▓▓██▓▓▓▓▓▓▓█▄ 
@@ -218,13 +227,7 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 
 /*
 +
-|                             VERSION 2?
-|
-|                      STYLESHEET FOR R/VINYLSCRATCH         
-|             MOSTLY BY KOOBAXION (sub a wub dub dub) AND 007GHG7 (secrit agnt mahn)       
-|ALSO SOME CREDIT GOES TO RAHLYN (that Rhy guy) AND MRJOKER7854 (no who best pone iz) AND ALISTERDX (Da guy who knows teh 'list')
-|                RAHLYN IS THE FLAIR GOD
-|       HAI GUIZ I DID NAMEZ SO I HELPED -PINKIE PIE                                     
+                          
 |                              
 */
 
@@ -1066,7 +1069,7 @@ visibility:visible!important;
 
 a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
 a.author[href$=Chinch335]:before {content:"Chinchy"}
-a.author[href$="mrjoker7854"]:before {content:"swer on me mum"}
+a.author[href$="mrjoker7854"]:before {content:"Pink Smile"}
 a.author[href$="120percentP0N3"]:before {content:"120percentcooler"}
 a.author[href$="simgaleed"]:before {content:"DarkNote"}
 a.author[href$="coggy9"]:before {content:"Steve"}
