--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -118,11 +118,11 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
- width:60px;
- height:60px;
+ background:url(%%rd-hat%%);
+ width:67px;
+ height:63px;
  margin-top:-35px;
- margin-left:4px;
+ margin-left:1px;
  margin-bottom:0px;
  margin-right:-40px;
 }
